<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaxiDash</string>
    <string name="hello_world">Hello world!</string>
    <string name="emptyString"> </string>
    <string name="ratingLabel">Driver Rating</string>
    <string name="defaultRating">NO RATING</string>
    <string name="defaultDriverName">NO DRIVER NAME</string>
    <string name="defaultCompanyName">NO COMPANY NAME</string>
    <string name="defaultValidity">INVALID</string>
    <string name="selectDriverLabel">Ride</string>

    <!-- Action Bar Titles -->
    <string name="title_activity_rate_driver">Rate Your Driver</string>
    <string name="title_activity_local_company_list">Top Local Cab Companies</string>
    <string name="title_activity_driver_profile">About the Driver</string>
    <string name="title_activity_nearby_cab_list">Nearby Cabs</string>
    <string name="action_settings">Settings</string>
    <string name="ratingRequest">How would you rate your driver?</string>
    <string name="commentsLabel">Comments:</string>
    <string name="defaultComment">Please leave your number or email if you would like to be contacted.</string>
    <string name="submitRide">Submit anonymous ride info?</string>
    <string name="submitRatingLabel">Rate</string>
    <string name="title_activity_favorite_driver_list">Favorite Drivers</string>
    <string name="title_activity_fare_estimator">Estimate Fare</string>
    <string name="title_activity_location_finder">Destination</string>

    <!-- Action Bar Titles -->
    <string-array name="activities">
        <item>Nearby Cabs</item>
        <item>Local Cab Companies</item>
        <item>Favorite Drivers</item>
        <item>Estimate Fare</item>
    </string-array>

    <!-- Action Button Titles -->
    <string name="action_call">Call</string>
    <string name="action_delete">Remove</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="distanceLabel">Total Distance:  </string>
    <string name="fareLabel">Estimated Fare:  </string>
    <string name="search_header">Enter your destination:</string>
    <string name="defaultDistance">0 miles</string>
    <string name="defaultFare">$0.00</string>
    <string name="defaultAddress">NO ADDRESS FOUND</string>
    <string name="defaultFeatureName">UNKNOWN</string>
    <string name="title_activity_taxi_dash">TaxiDash</string>
    <string name="splash_message">TaxiDash</string>
    <string name="endRideLabel">End Ride</string>

</resources>
