<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context="com.gmail.brian.broll.taxidash.app.RateDriver">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/submit_ride_container"
        android:orientation="vertical">

    <TextView
        android:text="@string/ratingRequest"
        android:id="@+id/ratingRequest"
        android:layout_width="wrap_content"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:rating="3"
        android:stepSize="1.0"
        android:id="@+id/rating" />

    <TextView
        android:text="@string/commentsLabel"
        android:id="@+id/commentsLabel"
        android:layout_width="wrap_content"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_below="@+id/starsBox"
        />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        bootstrapbutton:be_roundedCorners="true"
        android:id="@+id/comments"
        android:text=""
        android:layout_width="fill_parent"
        android:layout_height="220dp"
        android:layout_margin="10dp"
        android:hint="@string/defaultComment"
        android:gravity="center"
        android:layout_below="@+id/commentsLabel"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitRide"
        android:id="@+id/submitRide"
        android:checked="true"
        android:layout_gravity="center_horizontal" />

</LinearLayout>

        <com.beardedhen.androidbootstrap.BootstrapButton
            xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
            bootstrapbutton:bb_icon_right="fa-android"
            bootstrapbutton:bb_roundedCorners="false"
            bootstrapbutton:bb_type="primary"
            bootstrapbutton:bb_text_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:textSize="40sp"
            android:text="@string/submitRatingLabel"
            android:id="@+id/submitRating"
            android:onClick="onSubmitRatingClicked"
            android:layout_alignParentBottom="true"/>

</RelativeLayout>
